# CSSFinder

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CSSFinder.py  README.md  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: code_quality.yaml  deploy_to_pypi.yaml  deploy_to_test_pypi.yaml  labeler.yaml  reports_tests.yaml  system_tests.yaml  type_check.yaml
5qubits/: cssfproject.json
assets/profiling/5qubits_prof/: cssfproject.py
cssfinder/: __init__.py  __main__.py  _gilbert.py  api.py  base_model.py  cli.py  constants.py  crossplatform.py  cssfproject.py  enums.py  gilbert.py  hooks.py  interactive.py  io.py  log.py  modes.py  ops.py  report.py  task.py  types.py
cssfinder/algorithm/: __init__.py  gilbert.py  mode_util.py
cssfinder/algorithm/backend/: __init__.py  base.py  loader.py
cssfinder/algorithm/backend/numpy/: __init__.py  base.py  c128.py  complex128.py  complex64.py  float32.py  float64.py  impl.py
cssfinder/algorithm/backend/numpy/_impl/: __init__.py  _complex128.py  _complex64.py  _float32.py  _float64.py
cssfinder/examples/: __init__.py
cssfinder/examples/5qubits/: cssfproject.json  cssfproject.py
cssfinder/examples/5qubits_json/: cssfproject.json
cssfinder/examples/5qubits_py/: cssfproject.py
cssfinder/examples/GHZ3/: GHZ3_in.mtx  cssfproject.json
cssfinder/examples/GHZ3/symmetries/: GHZ3_sym_1_2.mtx  GHZ3_sym_1_5.mtx
cssfinder/examples/GHZ3_json/: cssfproject.json
cssfinder/examples/GHZ3_json/symmetries/: GHZ3_sym_0_0.mtx  GHZ3_sym_0_1.mtx  GHZ3_sym_1_0.mtx  GHZ3_sym_1_1.mtx  GHZ3_sym_1_3.mtx  GHZ3_sym_1_4.mtx  GHZ3_sym_1_6.mtx  GHZ3_sym_1_7.mtx
cssfinder/examples/GHZ4/: cssfproject.json
cssfinder/examples/GHZ4_json/: GHZ4_in.mtx  cssfproject.json
cssfinder/examples/SBiPa_json/: cssfproject.json  state.mtx
cssfinder/examples/benchmark_32x32/: cssfproject.py
cssfinder/examples/benchmark_64x64/: 10_in.mtx  cssfproject.py
cssfinder/examples/benchmark_64x64/symmetries/: sym_sym_0_1.mtx  sym_sym_0_2.mtx  sym_sym_0_3.mtx  sym_sym_0_4.mtx  sym_sym_0_5.mtx  sym_sym_0_6.mtx  sym_sym_0_7.mtx  sym_sym_1_1.mtx  sym_sym_1_2.mtx  sym_sym_1_3.mtx  sym_sym_1_4.mtx  sym_sym_1_5.mtx  sym_sym_1_6.mtx  sym_sym_1_7.mtx  sym_sym_2_0.mtx  sym_sym_2_1.mtx  sym_sym_2_2.mtx  sym_sym_2_3.mtx  sym_sym_2_4.mtx  sym_sym_2_5.mtx  sym_sym_2_6.mtx  sym_sym_2_7.mtx
cssfinder/examples/proj/: cssfproject.json  proj_proj.mtx
cssfinder/io/: __init__.py  asset_loader.py  gilbert_io.py  matrix.py  output_loader.py
cssfinder/io/v1_0_0/: asset_loader.py
cssfinder/project/: __init__.py  base.py  cssfproject.py
cssfinder/project/v1_0_0/: cssfproject.py
cssfinder/reports/: __init__.py  archive.py  html.py  json.py  manager.py  math.py  pdf.py  plotting.py  renderer.py  txt.py
cssfinder/templates/: report.html.jinja2
docs/performance/single_task/: create_plot.py  result.csv  run_perf.sh
examples/: future_project_file.json
examples/5qubits/: 5qubits_in.mtx  cssfproject.json  cssfproject.py
examples/GHZ3/: cssfproject.json
examples/GHZ4/: cssfproject.json
examples/profiling/5qubits_prof/: cssfproject.py
examples/proj/: cssfproject.json
profiling/: fsqn_64_64.py
profiling/dataset_64_64/: dataset_64_64_in.mtx
scripts/: __init__.py  gen_numpy_impl.py  release.py
scripts/templates/: MIT.md.jinja2  numpy.pyjinja2
test/: __init__.py  conftest.py
test/system/: test_fsnqd.py
test/test_reports/: __init__.py  base.py  test_html.py  test_pdf.py
test/test_system/: __init__.py  base.py  test_fsnqd.py  test_g3pae3qd.py  test_reports.py  test_sbipa.py  test_sbipi.py
